# sqlite-fetch

./: '  .dockerignore  .gitignore  .npmrc  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  eslint.config.js  example.sql  medfetch.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  typedoc.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.github/workflows/: doxygen.yaml
_docs/api/: globals.md  typedoc-sidebar.json
_docs/api/_media/: CMakeLists.txt
_docs/examples/: select.sql
_docs/guide/: getting-started.md
_docs/public/migrations/: 2025-07-31.ts  index.ts
docs/: index.md
docs/.vitepress/: config.ts
docs/api/: index.md
docs/api/variables/: Fetch.md  csv.md  uuid.md
docs/components/: REPL.vue
docs/cookbook/: paging.md  preflight-migrations.md  repl.md
docs/examples/sql/: create.sql  create_crud.sql  create_path_patients.sql  create_path_todos.sql  delete.sql  insert.sql  insert_request_headers.sql  insert_returning_all.sql  insert_select_from.sql  prelude.sql  select_all_and_hidden.sql  select_body.sql  select_explicit.sql  select_recursive_cte.sql  select_request_headers.sql  select_tvf.sql  select_where.sql  update.sql  update_patch.sql
docs/guide/: api-design.md  getting-started.md  introduction.md
docs/public/migrations/: 2025-07-30.ts
examples/: patients_bundle_root.sql  patients_extract.sql  patients_nested_extract.sql  prelude.sql  prelude_fat.sql  todos_all.sql  todos_int.sql  users_all.sql  users_flattened.sql
examples/c/: a.out  bassoon_print.c  bhop_print.c  fetch_print.c
src/: a.out  api.h  bassoon.c  bassoon.h  clarinet.c  clarinet.h  common.h  cookie.c  cookie.h  fetch.c  fetch.h  helpers.bassoon.c  helpers.bassoon.h  helpers.bhop.c  helpers.bhop.h  helpers.errors.h  helpers.fetch.c  helpers.fetch.h  helpers.h  helpers.prefix.c  helpers.prefix.h  helpers.tcp.c  helpers.tcp.h  helpers.tls.c  index.ts  jsonpath.cpp  jsonpath.h  main.c  parse.h  pnpm-lock.yaml  strmap.h  tls.c  tls.h  valgrind-out.txt  web.h  yapi.h  yarts.c  yarts.h  yartssql.c
src/lib/: bassoon.c  bassoon.h  bhop.c  bhop.h  cfns.c  cfns.h  deque.c  deque.h  error_handler.h  fetch.c  fetch.h  jsonpath.cpp  prefix.c  prefix.h  sql.c  sql.h  tcp.c  tcp.h  tls.c  tls.h
tests/: common.js  types_basic.test.js
web/: docusaurus.config.ts  package.json  pnpm-lock.yaml  wrangler.jsonc
web/docs/: intro.md  read-json.md
web/docs/guide/: _category_.json  read-json.md  write-json.md
website/: docusaurus.config.ts  package.json  pnpm-lock.yaml
website/docs/: api.md  intro.md  read-json.md
website/docs/api/: bassoon_h.md  fetch_h.md  functions.md  types.md  variables.md
website/static/api/: _2home_2bathan1_2dev_2yarts_2src_2yarts_8c-example.html  annotated.html  bassoon_8h.html  bassoon_8h__incl.map  bassoon_8h__incl.md5  bassoon_8h_source.html  classes.html  common_8h.html  common_8h__incl.map  common_8h__incl.md5  common_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  examples.html  fetch_8h.html  fetch_8h__incl.map  fetch_8h__incl.md5  fetch_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  jsonpath_8h_source.html  structbassoon-members.html  structbassoon.html  structfetch__init-members.html  structfetch__init.html
website/static/api/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
